# tools

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diagnostics.rs  lib.rs  main.rs  models.rs  redis_client.rs  redis_runtime.rs  store.rs  tdengine_client.rs  workspace.rs
src/components/: ConnectionModal.tsx  RedisNavRail.tsx  RedisWorkspace.tsx  ResourceTree.tsx  Sidebar.tsx  TdengineWorkspace.tsx  Workspace.tsx
src/i18n/: index.tsx
src/i18n/locales/: en-US.ts  zh-CN.ts
src/lib/: desktopApi.ts  filters.test.ts  filters.ts  mockData.test.ts  mockData.ts  mockRedis.ts  mockTdengine.ts  redisStatements.test.ts  redisStatements.ts  redisView.test.ts  redisView.ts  tdengine.test.ts  tdengine.ts
