[package]
name = "middleware-studio"
version = "0.1.0"
description = "Cross-platform middleware desktop workspace"
authors = ["Codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "middleware_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
encoding_rs = "0.8.35"
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
redis = { version = "0.32.7", features = ["tls-native-tls"] }
shlex = "1.3.0"
url = "2.5.7"
taos = { version = "0.12.3", default-features = false, features = ["ws-rustls", "optin"] }

